# wanzhi

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
actions/: emergency.py  medication.py  music.py
config/: default.yaml  fall_detection.yaml  gesture_detection.yaml  voices.yaml
docs/: mcp-media-tooling-analysis.md  qwen-cold-start-analysis.md  raspberry-pi-config.md
legacy/: README.md
modules/: llm.py  nlu.py  stt.py  tts.py  wake_word.py
scripts/: audition_voices.py  configure_labwc_fullscreen.py  download_models.sh  install_systemd.sh  mcp_media_server.py  start_graphical_session.sh  verify_llm_mlock.py  vision_smoke_test.py  watch_events.py
src/wanzhi/: __init__.py  app.py
src/wanzhi/actions/: __init__.py  emergency.py  media.py  medication.py  registry.py
src/wanzhi/core/: alert_listener.py  bus.py  (+6 more)
systemd/: lightdm-wanzhi-autologin.conf  wanzhi-llm.service  wanzhi-session.desktop  wanzhi-ui.service  wanzhi-vision.service  wanzhi-voice.service  wanzhi.target
test/: testvosk.py
tests/: test_action_registry.py  test_bus_and_shm.py  test_config_conversation.py  test_emergency_notifier.py  test_fall_detector.py  test_gesture_detector.py  test_llm_uds_client.py  test_media_tools.py  test_medication_repo.py  test_pose_backends.py  test_qq_music_provider.py  test_speech_queue.py  test_speech_queue_streaming.py  test_tool_call_interception.py  test_tts_manager.py  test_ui_emergency_display.py  test_vision_refactor.py  test_voice_matcher.py  test_voice_pipeline_followup.py  test_voice_router.py  test_wake_greeting.py  test_wake_word.py
(+60 files in other folders)
